# spraybot_bringup

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yml
launch/: behavior.launch.py  drivers.launch.py  localization.launch.py  mapviz.launch.py  navigation.launch.py  perception.launch.py  robot.launch.py  simulation.launch.py  visualization.launch.py
maps/: empty.yaml
params/: behavior.yaml  detection.yaml  gazebo.yaml  localization.yaml  navigation.yaml  perception.yaml  row_navigation.yaml  simulation.yaml
rviz/: mapviz.mvc  sim.rviz  simulation.rviz
