cmake_minimum_required(VERSION 3.8)
project(spraybot_bringup)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # Disable copyright and license checks
  set(ament_cmake_copyright_FOUND TRUE)

  ament_lint_auto_find_test_dependencies()
endif()

install(DIRECTORY
  launch
  maps
  params
  rviz
  DESTINATION share/${PROJECT_NAME}/
)

ament_package()
