<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spraybot_bringup</name>
  <version>0.0.1</version>
  <description>Bringup scripts and configurations for spraybot</description>
  <maintainer email="shrijitsingh99@gmail.com">shrijitsingh99</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>gazebo_ros</depend>
  <depend>husky_control</depend>
  <depend>husky_description</depend>
  <!-- TODO: Fix CI dependency issues -->
  <!-- Commented out for CI dependency purposes
  <depend>spraybot_behavior_tree</depend>
  <depend>spraybot_simulation</depend> -->
  <!-- Commented out for CI, since currently
    its not available on apt
  <depend>mapviz</depend> -->
  <depend>navigation2</depend>
  <depend>robot_localization</depend>
  <depend>robot_state_publisher</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
