<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spraybot_bringup</name>
  <version>0.0.1</version>
  <description>Bringup scripts and configurations for spraybot</description>
  <maintainer email="shrijitsingh99@gmail.com">shrijitsingh99</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>husky_control</exec_depend>
  <exec_depend>husky_description</exec_depend>
  <!-- TODO: Fix CI dependency issues -->
  <!-- Commented out for CI dependency purposes
  <exec_depend>spraybot_behavior_tree</exec_depend>
  <exec_depend>spraybot_simulation</exec_depend>
  <exec_depend>spraybot_utils</exec_depend> -->
  <!-- Commented out for CI, since currently
    its not available on apt
  <exec_depend>mapviz</exec_depend> -->
  <exec_depend>navigation2</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
